# gimp

./: .gitlab-ci.yml  INSTALL.in  autogen.sh  configure.ac  meson.build  meson_options.txt
.gitlab/: checkbashisms.sh
app/: gimpconsoleapp.c  gimpcoreapp.h  language.c  main.c  meson.build
libgimp/: gimp.c  gimp.def  gimpbatchprocedure.h  gimpdrawable_pdb.c  gimpdrawable_pdb.h  gimpenums.h  gimpimagecolorprofile.c  gimpimagecolorprofile_pdb.c  gimpprocedure.c  gimpproceduredialog.c  gimpproceduredialog.h  gimpui.def  gimpunit_pdb.c  meson.build
libgimpbase/: gimpunit.c  gimputils.c
libgimpcolor/: gimpcolor.def  gimpcolor.h  gimpcolorspace.c  gimpcolorspace.h  gimpcolortypes.h  meson.build
plug-ins/python/tests/test-file-plug-ins/tests/: batch-config.ini  bmp-export-tests.ini  bmp-tests.ini  bmpsuite-b-tests.files  bmpsuite-g-tests.files  bmpsuite-q-tests.files  config.ini  dds-tests-2.files  dds-tests.files  dds-tests.ini  gif-imagetestsuite-tests.files  gif-tests.ini  jpeg-imagetestsuite-tests.files  jpeg-tests.ini  meson.build  png-brokensuite-tests.files  png-imagetestsuite-tests.files  png-issue-6886.files  png-suite-tests-corrupt.files  png-suite-tests.files  png-tests.ini  pnm-tests-1.files  pnm-tests-2.files  pnm-tests-3.files  pnm-tests.ini  psb-tests.files  psb-tests.ini  psd-colormodes-tests.files  psd-tests.files  psd-tests.ini  psdparse-tests.files  sgi-tests-2.files  sgi-tests-3.files  sgi-tests.files  sgi-tests.ini  tga-tests.files  tga-tests.ini  tiff-cpan-tests.files  tiff-imagetestsuite-tests-2.files  tiff-imagetestsuite-tests-3.files  (+2 more)
(+155 files in other folders)
