# Add test configuration data...

install_data([
    # main config files
    'config.ini',
    'batch-config.ini',
    # file format specific config files for import testing
    'bmp-tests.ini',
    'tga-tests.ini',
    # file format specific config files for export testing
    'bmp-export-tests.ini',
    # file format specific files containing the files to test importing and
    # their expected result
    'bmpsuite-b-tests.files',
    'bmpsuite-g-tests.files',
    'bmpsuite-q-tests.files',
    'tga-tests.files',
  ],
  install_dir: gimpplugindir / 'plug-ins' / 'test-file-plug-ins' / 'tests',
)
